code13/app/client/imports/components/Assets/EditGraphic/editGraphic.css
.mgbEditGraphicSty_checkeredBackground {
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMElEQVQ4T2N89uzZfwY8QFJSEp80A+OoAcMiDP7//483HTx//hx/Ohg1gIFx6IcBALl+VXknOCvFAAAAAElFTkSuQmCC);
}

.mgbEditGraphicSty_thinBorder {
  border: 1px solid lightslategrey;
}

.mgbEditGraphicSty_thickBorder {
  border: 1px solid black;
}


.mgbEditGraphicSty_overlapUpLeft {
  position: relative;
  left: 16px;
  top: -16px;
}

.mgb-hidden {
	display: none !important;
}

.frameCanvases th {
	padding: 0 !important;
}

.layerCanvas {
	padding: 0 !important;
}

.highlight {
	background-color: #ccc;
}

.frameTH {
	padding: 0 !important;
}

.frameTH .dropdown {
	width: 32px !important;
	height: 48px !important;
	line-height: 48px;
	text-align: center;

}

.animTR th {
	/*background-color: transparent !important;*/
	border-left: none !important;
	border-right: none !important;
}

.animTH {
	padding: 0 !important;
}

.animTH .label {
	padding-left: 0;
	padding-right: 0;
	min-height: 25px;
}

.animTH .label {
	width: 100% !important;
	text-align: center;
}

.TopToolBarRowIcon {
	padding-left: 10px !important;
	padding-right: 10px !important;
}

.zoomLeftIcon {
	padding-left: 10px !important;
	padding-right: 5px !important;
}

.zoomMiddleIcon {
	padding-left: 5px !important;
	padding-right: 5px !important;
}
.zoomRightIcon {
	padding-left: 5px !important;
	padding-right: 10px !important;
}

.noMargin {
	margin: 0 !important;
}



/* sprite layers minimized view */
.mgb-minimized .animHeader {	display: none;
}

.mgb-minimized .framesHeader {
  display: none;
}

.mgb-minimized .layers {
  display: none;
}

.mgb-minimized .animTR { display: none; }
.mgb-maximized .miniPlay {
  display: none;
}
.mgb-maximized .miniAddFrames {
  display: none;
}

